# opensesame4_plugin_markers

./: .gitignore  markers_version_info.py  pyproject.toml  readme.md  setup.py
.github/workflows/: automated-tests.yml
opensesame_extensions/markers/markers_extension/: __init__.py  markers_extension.py
opensesame_extensions/markers_os4/markers_os4_extension/: markers_os4_extension.py
opensesame_plugins/markers/markers_init/: __init__.py  markers_init.md  markers_init.py
opensesame_plugins/markers/markers_send/: __init__.py  markers_send.py
opensesame_plugins/markers_os4/markers_os4_init/: markers_os4_init.py
opensesame_plugins/markers_os4/markers_os4_send/: markers_os4_send.md  markers_os4_send.py
samples/: flankertask_markers.osexp
test/: test_plugin.py
test/automated_test/: test_plugin.py
test/automated_test/data/: fail_testmarkers_os4_invalid_device_address.osexp  fail_testmarkers_os4_invalid_device_tag.osexp  fail_testmarkers_os4_invalid_marker_value.osexp  fail_testmarkers_os4_marker_duration_error.osexp  (+6 more)
test/data/: fail_testmarkers_os4_no_init_obj.osexp  testmarkers_os4_1.osexp  testmarkers_os4_11.osexp  testmarkers_os4_5.osexp
test/device_test/: Test Markers OpenSesame4 plugin 18062024.docx  testmarkers_os4_basic_with_device.osexp
test/timing_test/: os4_timing_test_parallel_first_1.acq  os4_timing_test_parallel_first_2.acq  os4_timing_test_parallel_first_3.acq  os4_timing_test_usbparmarker_first_1.acq  os4_timing_test_usbparmarker_first_2.acq  os4_timing_test_usbparmarker_first_3.acq  timing_test_os4_plugin_parallel_port.osexp
