[tool.poetry]
name = "opensesame-markers-plugin"
version = "0.1.1"
description = "Markers plugin for OpenSesame"
authors = ["Iris Spruit <i.m.spruit@fsw.leidenuniv.nl>"]
readme = "readme.md"
repository = "https://github.com/solo-fsw/opensesame4_plugin_markers"
packages = [
    {include = "opensesame_plugins"},
    {include = "opensesame_extensions"},
]
include = ["version_info.py"]

[tool.poetry.dependencies]
python = ">= 3.7"
opensesame-core = ">= 4.0.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
